fix: bug, when scrolling on the search resut you could see the book cover behind the arrow in the search bar

--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,7 @@ body, .app {
   width: 50px;
   height: 53px;
   background-image: url('./icons/arrow-back.svg');
+  background-color: white;
   background-position: center;
   background-repeat: no-repeat;
   background-size: 28px;
